--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Nav Bar Starts -->
     <header>
-
+        <div class="nav-bar">
+            <h2 class="nav-bar-title">Bangladesh 2.0</h2>
+            <button class="nav-btn">Sign In</button>
+        </div>
     </header>
-    <main>
-
-    </main>
-    <footer>
-        
-    </footer>
+    <!-- Nav Bar Ends -->
+     <!-- Banner Section Starts -->
+    <section class="banner">
+        <div class="banner-parent">
+            <div class="banner-textarea">
+                <h3 class="bn-hd-1">
+                    Bangladesh 2.0
+                </h3>
+                <h1 class="bn-hd-2">
+                    Idea , innovation , vision and challenges in New Bangladesh.
+                </h1>
+                <button class="bn-btn">Explore New Bangladesh</button>
+            </div>
+            <div class="banner-imgarea">
+                <img class="bn-img" src="images/hero.png" alt="National Monument of Bangladesh as A Icon" width="450px">
+            </div>
+        </div>
+    </section>
+    <!-- Banner Section Ends -->
+     
+    <!-- Future Section Starts -->
+    <!-- Future Section Ends -->
 </body>
 </html>
