--- a/index.html
+++ b/index.html
@@ -38,6 +38,48 @@
     <!-- Banner Section Ends -->
      
     <!-- Future Section Starts -->
+     <section class="future-area">
+        <div class="text-area">
+            <h1 class="ft-hd-1">
+                The Vision of Future
+            </h1>
+            <p class="ft-para">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+        </div>
+        <div class="card-container">
+            <div class="ft-card-1">
+                <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
+                <h2 class="card-hd">
+                    Digital Transformation
+                </h2>
+                <p class="card-para">
+                    Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.
+                </p>
+                <button class="card-btn-1">Learn More</button>
+            </div>
+            <div class="ft-card-2">
+                <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
+                <h2 class="card-hd">
+                    Green Energy
+                </h2>
+                <p class="card-para">
+                    Investments in solar and wind energy to ensure a sustainable and eco-friendly future.
+                </p>
+                <button class="card-btn-2">Learn More</button>
+            </div>
+            <div class="ft-card-3">
+                <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
+                <h2 class="card-hd">
+                    Modern Infrastructure
+                </h2>
+                <p class="card-para">
+                    Building state-of-the-art infrastructure to support economic growth and global competitiveness.
+                </p>
+                <button class="card-btn-3">Learn More</button>
+            </div>
+        </div>
+     </section>
     <!-- Future Section Ends -->
 </body>
 </html>
