Quote section completed

--- a/index.html
+++ b/index.html
@@ -81,5 +81,61 @@
         </div>
      </section>
     <!-- Future Section Ends -->
+    <!-- Comment Section Starts -->
+     <section class="comment-area">
+        <div class="cm-textarea">
+            <img class="cm-img" src="images/quote-bg.png" alt="">
+            <p class="cm-comment">
+                "Our people, particularly youth, gained us independence from an autocratic and undemocratic regime with their exceptional resolve and capability. That collective resolve should define Bangladesh of the future and place our nation as a responsive and responsible State in the comity of nations. This was indeed a movement that primarily brought together people who were long left in politics and development. Who asked ‘prosperity’ to be shared, to be inclusive. The people are aspired."
+            </p>
+            <h1 class="cm-name">
+                Dr. Muhammad Yunus
+            </h1>
+            <p class="cm-designation">
+                Chief Adviser of the People's Republic of Bangladesh
+            </p>
+        </div>
+     </section>
+    <!-- Comment Section Ends -->
+    <!-- Recent News Area Starts -->
+     <section class="recent-news-area">
+        <div class="news-textarea">
+            <h1 class="news-hd">
+                Recent News
+            </h1>
+            <p class="news-para">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+        </div>
+        <div class="news-card">
+            <div class="news-card-1">
+                <img src="images/satelite.png" alt="Satellites Image" class="news-cd-img">
+                <div class="news-card-text">
+                    <h1 class="news-card-hd"></h1>
+                    <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
+                    <p class="date-time">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-details">
+                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <button class="news-card-btn">Read More</button>
+                </div>
+            </div>
+        </div>
+        <div class="news-card">
+            <div class="news-card-1">
+                <img src="images/satelite.png" alt="Satellites Image" class="news-cd-img">
+                <div class="news-card-text">
+                    <h1 class="news-card-hd"></h1>
+                    <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
+                    <p class="date-time"></p>
+                    <p class="news-details">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="news-card-btn">Read More</button>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- Recent News Area Ends -->
 </body>
 </html>
