--- a/index.html
+++ b/index.html
@@ -111,31 +111,56 @@
             <div class="news-card-1">
                 <img src="images/satelite.png" alt="Satellites Image" class="news-cd-img">
                 <div class="news-card-text">
-                    <h1 class="news-card-hd"></h1>
+                    <h1 class="news-card-hd">
+                        Bangladesh Launches New Satellite
+                    </h1>
                     <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
                     <p class="date-time">Date: 05/01/2025 Time: 10.25 PM</p>
                     <p class="news-details">
-                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-with a certain degree of justification, be able to speak of humankind as civilized
+                        The Falcon 9 rocket's payload, the Bangladeshi government's first communications satellite, Bangabandhu-1, was placed into Earth orbit just 33 minutes after launch. Talking about the benefits of the Tk 2,765.66 crore commercial satellite, project officials said it would immensely contribute to the digital advancement of the country.
                     </p>
                     <button class="news-card-btn">Read More</button>
                 </div>
             </div>
         </div>
         <div class="news-card">
-            <div class="news-card-1">
+            <div class="news-card-2">
                 <img src="images/satelite.png" alt="Satellites Image" class="news-cd-img">
                 <div class="news-card-text">
-                    <h1 class="news-card-hd"></h1>
+                    <h1 class="news-card-hd">
+                        Second Satellite to be Launched bt Bangladesh
+                    </h1>
                     <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
                     <p class="date-time"></p>
-                    <p class="news-details">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="news-details"> Shahjahan Mahmood, chairman of the Bangladesh Satellite Company Ltd, has said that the deal for the second satellite will be finalized within two or three months and it will be launched in two or three years. The second satellite will be a Bangladesh Earth Observatory Satellite, he said. The satellite will be used for various purposes, including monitoring natural disasters, managing agricultural resources, assessing environmental changes, and more.
+                    </p>
                     <button class="news-card-btn">Read More</button>
                 </div>
             </div>
         </div>
      </section>
     <!-- Recent News Area Ends -->
+    <!-- Donate Section Starts -->
+     <section class="donate-area">
+        <div class="donate-textarea">
+            <h1 class="donate-hd">
+                Donate Today
+            </h1>
+            <p class="donate-para">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.
+            </p>
+        </div>
+        <div class="donate-btnarea">
+            <div class="amount-btn">
+                <button class="dn-btn-1">100 Taka</button>
+                <button class="dn-btn-2">200 Taka</button>
+                <button class="dn-btn-3">500 Taka</button>
+                <button class="dn-btn-4">1000 Taka</button>
+            </div>
+            <input type="text" name="" id="" placeholder="Other Amount(Taka)">
+            <button class="donate-btn">Donate Now</button>
+        </div>
+     </section>
+    <!-- Donate Section Ends -->
 </body>
 </html>
