Donate Area Completed

--- a/index.html
+++ b/index.html
@@ -152,15 +152,19 @@
         </div>
         <div class="donate-btnarea">
             <div class="amount-btn">
-                <button class="dn-btn-1">100 Taka</button>
-                <button class="dn-btn-2">200 Taka</button>
-                <button class="dn-btn-3">500 Taka</button>
-                <button class="dn-btn-4">1000 Taka</button>
+                <button class="dn-btn">100 Taka</button>
+                <button class="dn-btn">200 Taka</button>
+                <button class="dn-btn">500 Taka</button>
+                <button class="dn-btn">1000 Taka</button>
             </div>
-            <input type="text" name="" id="" placeholder="Other Amount(Taka)">
+            <input type="text" name="" id="" placeholder="Other Amount (Taka)" class="amt-input">
             <button class="donate-btn">Donate Now</button>
         </div>
-     </section>
+    </section>
     <!-- Donate Section Ends -->
+
+    <!-- Subscription Area Starts -->
+
+    <!-- Subcription Area Ends -->
 </body>
 </html>
