subscription area completed

--- a/index.html
+++ b/index.html
@@ -164,7 +164,28 @@
     <!-- Donate Section Ends -->
 
     <!-- Subscription Area Starts -->
-
+    <section class="subscription-area">
+        <h1 class="subs-hd">
+            Subscribe Newsletter
+        </h1>
+        <p class="subs-para-1">
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.
+        </p>
+        <input type="email" name="" id="" class="subs-in" placeholder="Enter your email here">
+        <button class="subs-btn">Subscribe</button>
+        <p class="subs-para-2">We Promise not to spam you!</p>
+    </section>
     <!-- Subcription Area Ends -->
+
+    <!-- Footer Area Starts -->
+        <footer>
+            <h1 class="foot-hd">Bangladesh 2.0</h1>
+            <div class="foot-icons">
+                <img src="images/facebook.png" alt="Facebook Icon" class="foot-icon">
+                <img src="images/instagram.png" alt="Instagram Icon" class="foot-icon">
+                <img src="images/x.png" alt="X Icon" class="foot-icon">
+            </div>
+        </footer>
+    <!-- Footer Area Ends -->
 </body>
 </html>
