--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p class="card-para">
                     Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.
                 </p>
-                <button class="card-btn-1">Learn More</button>
+                <button class="card-btn-1 card-hover">Learn More</button>
             </div>
             <div class="ft-card-2">
                 <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
@@ -66,7 +66,7 @@
                 <p class="card-para">
                     Investments in solar and wind energy to ensure a sustainable and eco-friendly future.
                 </p>
-                <button class="card-btn-2">Learn More</button>
+                <button class="card-btn-2 card-hover">Learn More</button>
             </div>
             <div class="ft-card-3">
                 <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
@@ -76,7 +76,7 @@
                 <p class="card-para">
                     Building state-of-the-art infrastructure to support economic growth and global competitiveness.
                 </p>
-                <button class="card-btn-3">Learn More</button>
+                <button class="card-btn-3 card-hover">Learn More</button>
             </div>
         </div>
      </section>
@@ -128,7 +128,7 @@
                 <img src="images/satelite.png" alt="Satellites Image" class="news-cd-img">
                 <div class="news-card-text">
                     <h1 class="news-card-hd">
-                        Second Satellite to be Launched bt Bangladesh
+                        Second Satellite to be Launched by Bangladesh
                     </h1>
                     <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
                     <p class="date-time"></p>
@@ -179,11 +179,14 @@
 
     <!-- Footer Area Starts -->
         <footer>
-            <h1 class="foot-hd">Bangladesh 2.0</h1>
-            <div class="foot-icons">
-                <img src="images/facebook.png" alt="Facebook Icon" class="foot-icon">
-                <img src="images/instagram.png" alt="Instagram Icon" class="foot-icon">
-                <img src="images/x.png" alt="X Icon" class="foot-icon">
+            <div class="foot-area">
+                <h1 class="foot-hd">Bangladesh 2.0</h1>
+                <hr>
+                <div class="foot-icons">
+                    <img src="images/facebook.png" alt="Facebook Icon" class="foot-icon">
+                    <img src="images/instagram.png" alt="Instagram Icon" class="foot-icon">
+                    <img src="images/x.png" alt="X Icon" class="foot-icon">
+                </div>
             </div>
         </footer>
     <!-- Footer Area Ends -->
