--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="card-container">
             <div class="ft-card-1">
-                <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
+                <img class="card-icon" src="images/digital-transform.png" alt="Card Icon">
                 <h2 class="card-hd">
                     Digital Transformation
                 </h2>
@@ -59,7 +59,7 @@
                 <button class="card-btn-1 card-hover">Learn More</button>
             </div>
             <div class="ft-card-2">
-                <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
+                <img class="card-icon" src="images/green-energy.png" alt="Card Icon">
                 <h2 class="card-hd">
                     Green Energy
                 </h2>
@@ -69,7 +69,7 @@
                 <button class="card-btn-2 card-hover">Learn More</button>
             </div>
             <div class="ft-card-3">
-                <img class="card-icon" src="images/card-icon.png" alt="Card Icon">
+                <img class="card-icon" src="images/modern.png" alt="Card Icon">
                 <h2 class="card-hd">
                     Modern Infrastructure
                 </h2>
@@ -115,7 +115,7 @@
                         Bangladesh Launches New Satellite
                     </h1>
                     <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
-                    <p class="date-time">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="date-time">Date: 11/01/2025 Time: 03.40 PM</p>
                     <p class="news-details">
                         The Falcon 9 rocket's payload, the Bangladeshi government's first communications satellite, Bangabandhu-1, was placed into Earth orbit just 33 minutes after launch. Talking about the benefits of the Tk 2,765.66 crore commercial satellite, project officials said it would immensely contribute to the digital advancement of the country.
                     </p>
@@ -125,14 +125,16 @@
         </div>
         <div class="news-card">
             <div class="news-card-2">
-                <img src="images/satelite.png" alt="Satellites Image" class="news-cd-img">
+                <img src="images/satellite2.jpg" alt="Satellites Image" class="news-cd-img">
                 <div class="news-card-text">
                     <h1 class="news-card-hd">
                         Second Satellite to be Launched by Bangladesh
                     </h1>
                     <img src="images/al-jazeera.png" alt="Al Jazeera Icon" class="news-icon">
-                    <p class="date-time"></p>
-                    <p class="news-details"> Shahjahan Mahmood, chairman of the Bangladesh Satellite Company Ltd, has said that the deal for the second satellite will be finalized within two or three months and it will be launched in two or three years. The second satellite will be a Bangladesh Earth Observatory Satellite, he said. The satellite will be used for various purposes, including monitoring natural disasters, managing agricultural resources, assessing environmental changes, and more.
+                    <p class="date-time">
+                        Date: 11/01/2025 Time: 04.20 PM
+                    </p>
+                    <p class="news-details"> Shahjahan Mahmood, chairman of the Bangladesh Satellite Company Ltd, has said that the deal for the second satellite will be finalized within two or three months and it will be launched in two or three years. The second satellite will be a Bangladesh Earth Observatory Satellite, he said. The satellite will be used for various purposes, including monitoring natural disasters.
                     </p>
                     <button class="news-card-btn">Read More</button>
                 </div>
